--- a/move_base/package.xml
+++ b/move_base/package.xml
@@ -30,6 +30,7 @@
     <build_depend>rospy</build_depend>
     <build_depend>std_srvs</build_depend>
     <build_depend>tf</build_depend>
+    <build_depend>behavior_decision</build_depend>
 
     <!--These deps aren't strictly needed, but given the default parameters require them to work, we'll enforce that they build -->
     <build_depend>base_local_planner</build_depend>
@@ -54,5 +55,6 @@
     <run_depend>rospy</run_depend>
     <run_depend>std_srvs</run_depend>
     <run_depend>tf</run_depend>
+    <run_depend>behavior_decision</run_depend>
 
 </package>
