--- a/behavior_decision/package.xml
+++ b/behavior_decision/package.xml
@@ -43,6 +43,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>apriltag_ros</build_depend>
+  <build_depend>message_generation</build_depend>
   <build_export_depend>costmap_2d</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>pluginlib</build_export_depend>
@@ -55,7 +56,8 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>tf</exec_depend>
   <exec_depend>apriltag_ros</exec_depend>
-  
+  <exec_depend>message_runtime</exec_depend>
+
   <export>
     <!-- Other tools can request additional information be placed here -->
     <behavior_decision plugin="${prefix}/pursuer_behavior_decision/pbd_plugin.xml" />
