--- a/behavior_decision/package.xml
+++ b/behavior_decision/package.xml
@@ -44,12 +44,14 @@
   <build_depend>tf</build_depend>
   <build_depend>apriltag_ros</build_depend>
   <build_depend>message_generation</build_depend>
+   <build_depend>nav_msgs</build_depend>
   <build_export_depend>costmap_2d</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>pluginlib</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>tf</build_export_depend>
   <build_export_depend>apriltag_ros</build_export_depend>
+  <build_export_depend>nav_msgs</build_export_depend>
   <exec_depend>costmap_2d</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>pluginlib</exec_depend>
@@ -57,6 +59,7 @@
   <exec_depend>tf</exec_depend>
   <exec_depend>apriltag_ros</exec_depend>
   <exec_depend>message_runtime</exec_depend>
+  <exec_depend>nav_msgs</exec_depend>
 
   <export>
     <!-- Other tools can request additional information be placed here -->
