改了一些bug;ROS_DEBUG换成ROS_DEBUG)NAMED,后面再debug咯

--- a/move_base/config/custom_rosconsole.conf
+++ b/move_base/config/custom_rosconsole.conf
@@ -1,2 +1,3 @@
 log4j.logger.ros.move_base=INFO
-log4j.logger.ros.behavior_decision=DEBUG
+log4j.logger.ros.behavior_decision=INFO
+log4j.logger.ros.behavior_decision.state_transition=DEBUG
