增加了搜索状态的bso selection, 但是效果不好，debug中

--- a/ccbso_local_planner/cfg/CCBSOPlanner.cfg
+++ b/ccbso_local_planner/cfg/CCBSOPlanner.cfg
@@ -11,12 +11,26 @@ gen = ParameterGenerator()
 # add_generic_localplanner_params(gen)
 
 # name, paramtype, level, description, default, min, max
+
+gen.add("psize", int_t, 0, "The number of samples to use when exploring the x velocity space", 20, 5, 50)
+gen.add("iteration", int_t, 0, "Number of BSO iteration", 50, 5, 100)
+
 gen.add("max_vel_x", double_t, 0, "Maximum translational velocity of the robot", 0.22, 0.01, 3)   
 gen.add("max_rot_vel", double_t, 0, "Maximum translational velocity of the robot", 2.75, 0.01, 3)   
 gen.add("acc_lim_x", double_t, 0, "Maximum linear acceleration of the robot", 2.5, 0.01, 3)   
-gen.add("acc_lim_theta", double_t, 0, "Minimum angular acceleration of the robot", 3.2, 0.01, 4)   
+gen.add("acc_lim_theta", double_t, 0, "Maximum angular acceleration of the robot", 3.2, 0.01, 4) 
+gen.add("Pelitist", double_t, 0, "probability of choose a elitist", 0.5, 0.01, 0.99)   
+gen.add("Pone", double_t, 0, "probability of choose one member", 0.7, 0.01, 0.99)  
+gen.add("Rstep", double_t, 0, "Radius disturbance when generate a new individual", 0.1, 0.01, 0.99)  
+gen.add("Astep", double_t, 0, "Angle disturbance when generate a new individual", 0.1, 0.01, 0.99)  
+gen.add("pheromone_lasting", double_t, 0, "pheromone action time", 30.0, 0.01, 200.0)  
 
-
+gen.add("searchDis", double_t, 0, "search / lookahead distance of the robot", 0.5, 0.01, 4)   
+gen.add("searchAngle", double_t, 0, "search angle of the robot", 1.0472, 0.01, 3.14)   
+gen.add("markedDis", double_t, 0, "parameter of visited area", 0.3, 0.01, 4) 
+gen.add("markedAngle", double_t, 0, "parameter of visited area", 0.785, 0.01, 3.14) 
+gen.add("threDis", double_t, 0, "parameter of trail recording", 0.2, 0.01, 4) 
+gen.add("threAngle", double_t, 0, "parameter of trail recording", 0.17, 0.01, 3.14) 
 # gen.add("sim_time", double_t, 0, "The amount of time to roll trajectories out for in seconds", 1.7, 0)
 # gen.add("sim_granularity", double_t, 0, "The granularity with which to check for collisions along each trajectory in meters", 0.025, 0)
 # gen.add("angular_sim_granularity", double_t, 0, "The granularity with which to check for collisions for rotations in radians", 0.1, 0)
