--- a/ccbso_local_planner/package.xml
+++ b/ccbso_local_planner/package.xml
@@ -18,7 +18,9 @@
     <build_depend>pcl_conversions</build_depend>
     <build_depend>roscpp</build_depend>
     <build_depend>tf</build_depend>
-
+    <build_depend>sensor_msgs</build_depend>
+    <build_depend>std_msgs</build_depend>
+    <build_depend>visualization_msgs</build_depend>
     <run_depend>base_local_planner</run_depend>
     <run_depend>costmap_2d</run_depend>
     <run_depend>dynamic_reconfigure</run_depend>
@@ -28,6 +30,9 @@
     <run_depend>pluginlib</run_depend>
     <run_depend>roscpp</run_depend>
     <run_depend>tf</run_depend>
+    <run_depend>sensor_msgs</run_depend>
+    <run_depend>std_msgs</run_depend>
+    <run_depend>visualization_msgs</run_depend>
 
     <export>
         <nav_core plugin="${prefix}/blp_plugin.xml" />
