--- a/move_base/cfg/MoveBase.cfg
+++ b/move_base/cfg/MoveBase.cfg
@@ -27,4 +27,5 @@ gen.add("oscillation_timeout", double_t, 0, "How long in seconds to allow for os
 gen.add("oscillation_distance", double_t, 0, "How far in meters the robot must move to be considered not to be oscillating.", 0.5, 0, 10)
 
 gen.add("restore_defaults", bool_t, 0, "Restore to the original configuration", False)
+gen.add("ccbso_localPlanner_enable", bool_t, 0, "Enable CCBSO local planner", True)
 exit(gen.generate(PACKAGE, "move_base_node", "MoveBase"))
