增加了可以查询fitness的服务;搜索机器人还是会撞墙而且每次在2,-2?的位置行为比较奇怪，会绕一个圈;pheromone没起作用

--- a/ccbso_local_planner/cfg/CCBSOPlanner.cfg
+++ b/ccbso_local_planner/cfg/CCBSOPlanner.cfg
@@ -23,14 +23,18 @@ gen.add("Pelitist", double_t, 0, "probability of choose a elitist", 0.5, 0.01, 0
 gen.add("Pone", double_t, 0, "probability of choose one member", 0.7, 0.01, 0.99)  
 gen.add("Rstep", double_t, 0, "Radius disturbance when generate a new individual", 0.1, 0.01, 0.99)  
 gen.add("Astep", double_t, 0, "Angle disturbance when generate a new individual", 0.1, 0.01, 0.99)  
-gen.add("pheromone_lasting", double_t, 0, "pheromone action time", 30.0, 0.01, 200.0)  
+gen.add("pheromone_lasting", double_t, 0, "pheromone action time", 100.0, 0.01, 500.0)  
 
-gen.add("searchDis", double_t, 0, "search / lookahead distance of the robot", 0.5, 0.01, 4)   
+gen.add("searchDis", double_t, 0, "search / lookahead distance of the robot", 1.0, 0.01, 4)   
 gen.add("searchAngle", double_t, 0, "search angle of the robot", 1.0472, 0.01, 3.14)   
-gen.add("markedDis", double_t, 0, "parameter of visited area", 0.3, 0.01, 4) 
+gen.add("markedDis", double_t, 0, "parameter of visited area", 0.5, 0.01, 4) 
 gen.add("markedAngle", double_t, 0, "parameter of visited area", 0.785, 0.01, 3.14) 
 gen.add("threDis", double_t, 0, "parameter of trail recording", 0.2, 0.01, 4) 
 gen.add("threAngle", double_t, 0, "parameter of trail recording", 0.17, 0.01, 3.14) 
+
+gen.add("weight_aa", double_t, 0, "weight of angular acceleration", 0.1, 0.01, 10.0) 
+
+
 # gen.add("sim_time", double_t, 0, "The amount of time to roll trajectories out for in seconds", 1.7, 0)
 # gen.add("sim_granularity", double_t, 0, "The granularity with which to check for collisions along each trajectory in meters", 0.025, 0)
 # gen.add("angular_sim_granularity", double_t, 0, "The granularity with which to check for collisions for rotations in radians", 0.1, 0)
