--- a/ccbso_local_planner/package.xml
+++ b/ccbso_local_planner/package.xml
@@ -21,6 +21,7 @@
     <build_depend>sensor_msgs</build_depend>
     <build_depend>std_msgs</build_depend>
     <build_depend>visualization_msgs</build_depend>
+    <build_depend>message_generation</build_depend>
     <run_depend>base_local_planner</run_depend>
     <run_depend>costmap_2d</run_depend>
     <run_depend>dynamic_reconfigure</run_depend>
@@ -33,7 +34,7 @@
     <run_depend>sensor_msgs</run_depend>
     <run_depend>std_msgs</run_depend>
     <run_depend>visualization_msgs</run_depend>
-
+    <run_depend>message_runtime</run_depend>
     <export>
         <nav_core plugin="${prefix}/blp_plugin.xml" />
     </export>
