--- a/ccbso_local_planner/cfg/CCBSOPlanner.cfg
+++ b/ccbso_local_planner/cfg/CCBSOPlanner.cfg
@@ -12,8 +12,11 @@ gen = ParameterGenerator()
 
 # name, paramtype, level, description, default, min, max
 
-gen.add("psize", int_t, 0, "The number of samples to use when exploring the x velocity space", 20, 5, 50)
-gen.add("iteration", int_t, 0, "Number of BSO iteration", 50, 5, 100)
+gen.add("psize", int_t, 0, "The number of samples to use when exploring the x velocity space", 20, 5, 100)
+gen.add("iteration", int_t, 0, "Number of BSO iteration", 50, 5, 500)
+# debug
+gen.add("show_poseArray", bool_t, 0, "Show the trail of robot in poseArray.", True)
+gen.add("pheromone_forever", bool_t, 0, "Show the trail of robot in poseArray.", True)
 
 gen.add("max_vel_x", double_t, 0, "Maximum translational velocity of the robot", 0.22, 0.01, 3)   
 gen.add("max_rot_vel", double_t, 0, "Maximum translational velocity of the robot", 2.75, 0.01, 3)   
@@ -23,17 +26,19 @@ gen.add("Pelitist", double_t, 0, "probability of choose a elitist", 0.5, 0.01, 0
 gen.add("Pone", double_t, 0, "probability of choose one member", 0.7, 0.01, 0.99)  
 gen.add("Rstep", double_t, 0, "Radius disturbance when generate a new individual", 0.1, 0.01, 0.99)  
 gen.add("Astep", double_t, 0, "Angle disturbance when generate a new individual", 0.1, 0.01, 0.99)  
-gen.add("pheromone_lasting", double_t, 0, "pheromone action time", 100.0, 0.01, 500.0)  
+gen.add("pheromone_lasting", double_t, 0, "pheromone action time", 100.0, 0.01, 1000.0)  
 
 gen.add("searchDis", double_t, 0, "search / lookahead distance of the robot", 1.0, 0.01, 4)   
-gen.add("searchAngle", double_t, 0, "search angle of the robot", 1.0472, 0.01, 3.14)   
-gen.add("markedDis", double_t, 0, "parameter of visited area", 0.5, 0.01, 4) 
-gen.add("markedAngle", double_t, 0, "parameter of visited area", 0.785, 0.01, 3.14) 
+gen.add("searchAngle", double_t, 0, "search angle of the robot", 1.9, 0.01, 3.14)   
+gen.add("markedDis", double_t, 0, "parameter of visited area", 0.7, 0.01, 4) 
+gen.add("markedAngle", double_t, 0, "parameter of visited area", 1.0472, 0.01, 3.14) 
 gen.add("threDis", double_t, 0, "parameter of trail recording", 0.2, 0.01, 4) 
 gen.add("threAngle", double_t, 0, "parameter of trail recording", 0.17, 0.01, 3.14) 
 
-gen.add("weight_aa", double_t, 0, "weight of angular acceleration", 0.1, 0.01, 10.0) 
-
+gen.add("weight_aa", double_t, 0, "weight of angular acceleration", 0.01, 0.001, 3.0) 
+gen.add("weight_cruiser", double_t, 0, "weight of cruiser", 2.0, 0.01, 5.0)
+gen.add("cruiser_max", double_t, 0, "shoule be bigger than max(mapSizeX,mapSizeY)", 5.0, 0.01, 10.0)
+gen.add("pheromone", double_t, 0, "fundamental pheromone/ weight of pheromone", 10.0, 0.01, 30.0)
 
 # gen.add("sim_time", double_t, 0, "The amount of time to roll trajectories out for in seconds", 1.7, 0)
 # gen.add("sim_granularity", double_t, 0, "The granularity with which to check for collisions along each trajectory in meters", 0.025, 0)
