增加了Keeper状态，但是现在只能跟着直行的evader,evader转弯了的话容易跟丢

--- a/ccbso_local_planner/cfg/CCBSOPlanner.cfg
+++ b/ccbso_local_planner/cfg/CCBSOPlanner.cfg
@@ -16,7 +16,8 @@ gen.add("psize", int_t, 0, "The number of samples to use when exploring the x ve
 gen.add("iteration", int_t, 0, "Number of BSO iteration", 50, 5, 500)
 # debug
 gen.add("show_poseArray", bool_t, 0, "Show the trail of robot in poseArray.", True)
-gen.add("pheromone_forever", bool_t, 0, "Show the trail of robot in poseArray.", True)
+gen.add("pheromone_forever", bool_t, 0, "Keep pheromone.", False)
+gen.add("clear_pheromone", bool_t, 0, "Keep pheromone.", False)
 
 gen.add("max_vel_x", double_t, 0, "Maximum translational velocity of the robot", 0.22, 0.01, 3)   
 gen.add("max_rot_vel", double_t, 0, "Maximum translational velocity of the robot", 2.75, 0.01, 3)   
@@ -38,7 +39,11 @@ gen.add("threAngle", double_t, 0, "parameter of trail recording", 0.17, 0.01, 3.
 gen.add("weight_aa", double_t, 0, "weight of angular acceleration", 0.01, 0.001, 3.0) 
 gen.add("weight_cruiser", double_t, 0, "weight of cruiser", 2.0, 0.01, 5.0)
 gen.add("cruiser_max", double_t, 0, "shoule be bigger than max(mapSizeX,mapSizeY)", 5.0, 0.01, 10.0)
-gen.add("pheromone", double_t, 0, "fundamental pheromone/ weight of pheromone", 10.0, 0.01, 30.0)
+gen.add("pheromone", double_t, 0, "fundamental pheromone/ weight of pheromone", 2.0, 0.01, 30.0)
+gen.add("weight_pc", double_t, 0, "weight of potential collision", 5.0, 0.001, 30.0) 
+gen.add("weight_k", double_t, 0, "weight of keeper angle", 2.0, 0.001, 30.0) 
+gen.add("weight_d", double_t, 0, "weight of distance to target", 1.0, 0.001, 30.0) 
+gen.add("disToTarget", double_t, 0, "Expect distance to target", 1.0, 0.001, 5.0) 
 
 # gen.add("sim_time", double_t, 0, "The amount of time to roll trajectories out for in seconds", 1.7, 0)
 # gen.add("sim_granularity", double_t, 0, "The granularity with which to check for collisions along each trajectory in meters", 0.025, 0)
