--- a/move_base/config/custom_rosconsole.conf
+++ b/move_base/config/custom_rosconsole.conf
@@ -1,3 +1,6 @@
 log4j.logger.ros.move_base=INFO
 log4j.logger.ros.behavior_decision=INFO
 log4j.logger.ros.behavior_decision.state_transition=DEBUG
+log4j.logger.ros.ccbso_local_planner=DEBUG
+log4j.logger.ros.ccbso_local_planner.result=DEBUG
+log4j.logger.ros.ccbso_local_planner.FpotentialCollision=INFO
