增加了following状态，跑得还不好

--- a/ccbso_local_planner/cfg/CCBSOPlanner.cfg
+++ b/ccbso_local_planner/cfg/CCBSOPlanner.cfg
@@ -42,8 +42,12 @@ gen.add("cruiser_max", double_t, 0, "shoule be bigger than max(mapSizeX,mapSizeY
 gen.add("pheromone", double_t, 0, "fundamental pheromone/ weight of pheromone", 2.0, 0.01, 30.0)
 gen.add("weight_pc", double_t, 0, "weight of potential collision", 5.0, 0.001, 30.0) 
 gen.add("weight_k", double_t, 0, "weight of keeper angle", 3.0, 0.001, 30.0) 
-gen.add("weight_d", double_t, 0, "weight of distance to target", 1.0, 0.001, 30.0) 
+gen.add("weight_d", double_t, 0, "weight of distance to target", 0.7, 0.001, 3.0) 
 gen.add("disToTarget", double_t, 0, "Expect distance to target", 1.0, 0.001, 5.0) 
+gen.add("weight_g", double_t, 0, "weight of disturbance to subgoal", 1.0, 0.001, 3.0) 
+gen.add("disToSubgoal", double_t, 0, "Choose subgoal", 0.3, 0.001, 5.0) 
+gen.add("weight_u", double_t, 0, "weight of uniform distribution", 0.2, 0.001, 3.0) 
+
 
 # gen.add("sim_time", double_t, 0, "The amount of time to roll trajectories out for in seconds", 1.7, 0)
 # gen.add("sim_granularity", double_t, 0, "The granularity with which to check for collisions along each trajectory in meters", 0.025, 0)
